<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
<!--        <item-->
<!--            android:id="@+id/nav_camera"-->
<!--            android:icon="@drawable/ic_menu_camera"-->
<!--            android:title="@string/menu_item_import"/>-->
        <item
            android:id="@+id/nav_connection"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_item_connection"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_item_setting"
            android:tooltipText="0"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_item_terminal"
            android:tooltipText="1"/>
    </group>

    <item android:title="@string/menu_group_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_item_share"
                android:tooltipText="3"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_item_contact"
                android:tooltipText="4"/>
        </menu>
    </item>

</menu>
